--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
+streamlit==1.31.1
+pandas==2.2.0
+kaggle==1.6.6
 flask==3.0.2
 flask-cors==4.0.0
-pandas==2.2.0
-python-dotenv==1.0.1
-supabase==1.2.0
+uvicorn[standard]==0.27.1
+python-multipart==0.0.9
+pydantic==2.6.1
 requests==2.31.0
+python-dotenv==1.0.1
+supabase==2.3.5
 python-magic==0.4.27
-chardet==5.2.0
-gunicorn==21.2.0 
+extra-streamlit-components==0.1.60
+chardet==5.2.0 
